# whisper-rs

./: .gitignore  2026-07-14T03-13-24-115Z-f8a7ce54-full.html  2026-07-14T03-16-03-612Z-0709874b-full.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  deny.toml  idea.txt
.github/workflows/: ci.yml  release.yml
.scripts/: commit.ps1  git-commit-001.ps1  git-commit.ps1  run-build-nodefault.ps1  run-tests.ps1  test-out.txt  transfer-repo.ps1
.superpowers/sdd/: progress.md
docs/: ARCHITECTURE.md  BACKLOG.md  ISSUES.md  RELEASE-READINESS-20260715.md  ROADMAP.md
docs/adr/: 0001-unsafe-confined-to-ffi.md  0002-single-error-type.md  0003-feature-gated-optional-capabilities.md
docs/analysis/: MATURITY.md
docs/discovery/: IDEA-BRIEF.md
examples/: decode.rs  transcribe.rs
plans/: 001-streaming-finalize-and-transcribe-seam.md  002-reconcile-docs.md  003-delete-dead-code.md  004-fix-vad-min-speech.md  005-harden-downloader.md  006-clustering-perf.md  007-resample-flush.md  008-ci-gates.md  009-test-coverage-gaps.md  010-cleanups.md  README.md
src/: error.rs  lib.rs  output.rs  pipeline.rs  prelude.rs  trace.rs
src/asr/: mod.rs
src/audio/: media.rs  mod.rs  preprocess.rs  (+1 more)
tests/: asr.rs  audio.rs  audio_preprocess.rs  audio_vad.rs  diarize_cluster.rs  diarize_merge.rs  error.rs  ffi_smoke.rs  gen_fixture.rs  hallucination.rs  media_decode.rs  models.rs  output.rs  pipeline.rs  pipeline_download_off.rs  pipeline_postprocess.rs  pipeline_preprocess.rs  postprocess_fillers.rs  postprocess_numbers.rs  postprocess_repeats.rs  stream_local_agreement.rs  stream_session.rs  stream_two_pass.rs  timestamps.rs  timestamps_monotonic.rs
(+17 files in other folders)
