[package]
name = "whisper-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
publish = false
license = "BSD-3-Clause"

[features]
default = ["diarization", "streaming", "download"]
diarization = []
streaming = []
download = ["dep:ureq", "dep:sha2"]
# Opt-in: document + surface the raw `ffi` module (unwrapped whisper.cpp bindings) for power users.
raw-api = []
# Opt-in: decode non-WAV media (m4a/mp3/flac/ogg/...) via the ffmpeg libraries (ffmpeg-next).
# Requires ffmpeg 8.x shared+dev libraries at build time (set FFMPEG_DIR) and the DLLs on PATH at runtime.
ffmpeg = ["dep:ffmpeg-next"]
# Opt-in: emit `tracing` spans/events from the FFI download + transcription paths. No-op otherwise;
# the consumer installs their own subscriber.
tracing = ["dep:tracing"]

[dependencies]
thiserror = "2"
hound = "3"
rubato = "0.15"
ureq = { version = "2", optional = true }
sha2 = { version = "0.10", optional = true }
ffmpeg-next = { version = "8.1", optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
proptest = "1"

[build-dependencies]
bindgen = "0.72"
cc = "1"
